--- a/client/styles/Reportage.module.css
+++ b/client/styles/Reportage.module.css
@@ -1,9 +1,3 @@
-.reportageItem img {
-  width: 100%;
-  height: 250px;
-  object-fit: cover;
-}
-
 .reportageItem {
   height: 250px !important;
   position: relative;
@@ -71,6 +65,11 @@
   /* Just in case there are inline attributes */
   width: 100% !important;
   height: auto !important;
+}
+
+.photos img:hover{
+  opacity: .8;
+  transition-duration: 1s;
 }
 
 @media (max-width: 1200px) {
