--- a/client/styles/Payment.module.css
+++ b/client/styles/Payment.module.css
@@ -1,6 +1,8 @@
 .main{
     min-height: 100vh;
     background-color: #1c1c1c;
+    margin: 0px!important;
+    padding-top: 15px;
 }
 
 .form{
@@ -11,10 +13,10 @@
     padding: 10px 5px!important;
     width: 100%!important;
 }
+
 .form label{
     color: white;
 }
 .formsContainer{
     border: 1px solid rgba(255, 255, 255, .1);
-    margin-top: 10px;
 }
