--- a/client/styles/Reportage.module.css
+++ b/client/styles/Reportage.module.css
@@ -3,6 +3,8 @@
   position: relative;
   overflow: hidden;
   cursor: pointer;
+  border-right: 2px solid #262626;
+  border-bottom: 2px solid #262626;
 }
 
 .overlay {
