--- a/client/styles/Reportage.module.css
+++ b/client/styles/Reportage.module.css
@@ -69,8 +69,8 @@
   height: auto !important;
 }
 
-.photos img:hover{
-  opacity: .8;
+.photos img:hover {
+  opacity: 0.8;
   transition-duration: 1s;
 }
 
@@ -115,4 +115,78 @@
 
   transform: scale(1.5);
   padding: 10px;
+}
+
+.searchButton {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.search input[type="text"] {
+  padding: 3px;
+  margin-top: 8px;
+  font-size: 14px;
+  border: none;
+  width: 95%;
+}
+.search form{
+  display: flex;
+  justify-content: center;
+}
+.searchItem {
+}
+
+.searchButton:hover {
+  background: #ccc;
+}
+
+.myInputId {
+  box-sizing: border-box;
+  background-image: url("../public/search.png");
+  background-position: 14px 12px;
+  background-repeat: no-repeat;
+  font-size: 16px;
+  padding: 14px 20px 12px 45px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+}
+
+.myInputId:focus {
+  outline: 3px solid #ddd;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdownContent {
+  background-color: #f6f6f6;
+  overflow: auto;
+  border: 1px solid #ddd;
+  z-index: 1;
+  width: 50%;
+  position: absolute;
+  border-radius: 5px;
+}
+
+.dropdownContent a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {
+  background-color: #ddd;
+}
+
+.show {
+  display: block;
 }
