--- a/admin/src/scss/style.scss
+++ b/admin/src/scss/style.scss
@@ -9,3 +9,7 @@
 
 // If you want to add something do it here
 @import "custom";
+
+.ck.ck-editor__editable_inline{
+    border: 1px solid rgb(221, 220, 220)!important;
+}
