--- a/client/styles/Reportage.module.css
+++ b/client/styles/Reportage.module.css
@@ -54,7 +54,6 @@
 .photos {
   /* Prevent vertical gaps */
   line-height: 0;
-
   -webkit-column-count: 3;
   -webkit-column-gap: 0px;
   -moz-column-count: 3;
@@ -63,9 +62,13 @@
   column-gap: 0px;
 }
 
+.photos div{
+  transition-duration: .3s
+}
+
 .photos img {
   /* Just in case there are inline attributes */
-  width: 100% !important;
+    width: 100% !important;
   height: auto !important;
 }
 
@@ -88,6 +91,7 @@
     column-count: 3;
   }
 }
+
 @media (max-width: 800px) {
   .photos {
     -moz-column-count: 2;
@@ -95,6 +99,7 @@
     column-count: 2;
   }
 }
+
 @media (max-width: 400px) {
   .photos {
     -moz-column-count: 1;
